--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
 {% if form.errors %}
-    <p>Username and password doesnt match</p>
+<p class="error-message">Username and password don't match</p>
 {% endif %}
-<form action="{% url 'authentication:login' %}" method="post">
+<form class="login-register" action="{% url 'authentication:login' %}" method="post">
     {% csrf_token %}
-    {{ form.as_div }}
-    <button type="submit">Login</button>
+    <div class="form-group">
+        {{ form.username.label_tag }}
+        <br>{{ form.username }}
+        {% if form.username.errors %}
+            <div class="error">{{ form.username.errors }}</div>
+        {% endif %}
+    </div>
+    <div class="form-group">
+        {{ form.password.label_tag }}
+        <br>{{ form.password }}
+        {% if form.password.errors %}
+            <div class="error">{{ form.password.errors }}</div>
+        {% endif %}
+    </div>
+    <button class="" type="submit" class="btn btn-primary">Login</button>
 </form>
-{% endblock content %}
+{% endblock %}
+    
