--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-<form action="{% url 'authentication:register' %}" method="post">
-    {% csrf_token %}
-    {% for field in form %}
-        {{ field.errors }}
-        {{ field.name }} {{ field }}
-        {% if field.help_text %} {% comment "ignore help text" %}{% endcomment %}
-        {% endif %}
-    {% endfor %}
-    <button type="submit">Register</button>
-</form>
+    <form class="login-register" action="{% url 'authentication:register' %}" method="post">
+        {% csrf_token %}
+        {{ form.errors }}
+        {% for field in form %}
+            <div class="form-group">
+                <label for="{{ field.id_for_label }}">{{ field.label }}: *</label>
+                {{ field }}
+                {% if field.help_text %}
+                {% endif %}
+            </div>
+        {% endfor %}
+        <button type="submit">Register</button>
+    </form>
 {% endblock content %}
