--- a/static/todo_app/index.css
+++ b/static/todo_app/index.css
@@ -48,7 +48,7 @@
     transition: -webkit-transform 0.3s ease, -webkit-box-shadow 0.3s ease;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     transition: transform 0.3s ease, box-shadow 0.3s ease, -webkit-transform 0.3s ease, -webkit-box-shadow 0.3s ease;
-    max-height: 250px;
+    max-height: 350px;
     overflow-y: auto;
 }
 
@@ -126,4 +126,32 @@
 
 .unknown {
     background-color: #9e9e9e;
+}
+
+@media screen and (max-width: 600px) {
+    .todo-props {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-item-align: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: baseline;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+    }
+    
+
+    .todo-props > * {
+        margin-bottom: 0.5rem;
+    }
+
+    .todo-props > *:last-child {
+        margin-bottom: 0;
+    }
 }
