--- a/templates/todo_item.html
+++ b/templates/todo_item.html
@@ -6,8 +6,19 @@
         <form action="{% url 'todo_app:edit_todo' todo.id %}" method="get">
             <button type="submit">Edit</button>
         </form>
+        <form action="{% url 'todo_app:delete_todo' todo.id %}" method="post" onsubmit="return confirmDeletion()">
+            {% csrf_token %}
+            <button class="danger">Delete</button>
+        </form>
     </div>
     <div class="todo-description">
         <p>{{ todo.description }}</p>
     </div>
 </li>
+{% block script %}
+<script>
+    function confirmDeletion() {
+       return confirm("Are you sure want to delete this todo permanently?")
+    }
+</script>
+{% endblock script %}
